tests/ui/duplicate.stderr
error: discriminant value `1` assigned more than once
  --> tests/ui/duplicate.rs:23:9
   |
23 |     C = 1,
   |         ^

error: discriminant value `0` assigned more than once
  --> tests/ui/duplicate.rs:30:5
   |
30 |     C,
   |     ^
